# ts-cdk

./: .gitignore  Cargo.toml  LICENSE  README.md  ts-cdk-installer.sh
.github/workflows/: release.yml  test.yml
src/: main.rs
src/cli/: init.rs
src/commands/: init.rs  mod.rs
src/templates/: assets.rs  generate.rs  mod.rs
templates/: .prettierignore  _.gitignore  biome.format.json  biome.json  biome.lint.json  cdk.json  eslint.config.mjs  package.json  tsconfig.json  vitest.config.mjs
templates/lib/: %project-name%-stack.ts
templates/test/: %project-name%.test.ts
test-release/v0.1.0/: ts-cdk
